<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/iconmenu_messages"
        android:title="@string/title_messages"
        android:icon="@drawable/chat"/>
    <item
        android:id="@+id/iconmenu_users"
        android:title="@string/title_users"
        android:icon="@drawable/telephone"/>
    <item
        android:id="@+id/iconmenu_groups"
        android:title="@string/title_groups"
        android:icon="@drawable/users"/>
    <item
        android:id="@+id/iconmenu_user"
        android:title="@string/title_user"
        android:icon="@drawable/user"/>
    <item
        android:id="@+id/invisible"
        android:visible="false"/>
</menu>
