<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/user"
        android:background="@drawable/image_background"
        app:civ_border_color="@color/colorText"
        app:civ_border_width="2dp"
        app:tint="@color/white"/>
    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_user"
        android:layout_toEndOf="@id/image_user"
        android:layout_toStartOf="@id/tv_datetime"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_friends"
        android:layout_toEndOf="@id/image_user"
        android:layout_below="@id/tv_user_name"
        android:paddingHorizontal="10dp"
        android:paddingBottom="5dp"/>
    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_alignParentEnd="true"
        android:paddingHorizontal="10dp"/>
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accepted"
        android:gravity="center"
        android:layout_below="@id/tv_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_accept_request"
        style="@style/mybutton"
        android:layout_toEndOf="@id/image_user"
        android:layout_below="@id/tv_status"
        android:text="@string/accept"
        />
    <Button
        android:id="@+id/btn_deny_request"
        style="@style/mybutton"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_status"
        android:text="@string/deny"
        android:layout_marginEnd="20dp"/>

</RelativeLayout>