<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/users"
        android:background="@drawable/image_background"
        app:civ_border_color="@color/colorText"
        app:civ_border_width="2dp"
        app:tint="@color/white"
        android:contentDescription="@string/image" />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_group"
        android:layout_toEndOf="@id/image"
        android:layout_toStartOf="@id/tv_message_datetime"
        android:paddingHorizontal="10dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_content"
        android:layout_toEndOf="@id/image"
        android:layout_below="@id/tv_name"
        android:paddingHorizontal="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        />
    <TextView
        android:id="@+id/tv_message_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"/>

</RelativeLayout>