<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/online_chat_app"
        android:contentDescription="@string/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:id="@+id/name_container"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            style="@style/myedittext"
            android:layout_marginVertical="6dp"
            android:inputType="text"
            android:hint="@string/edittext_name_user"
            android:imeOptions="actionDone"
            android:maxLength="50"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:id="@+id/password_container"
        android:layout_below="@+id/name_container"
        android:layout_marginVertical="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            style="@style/myedittext"
            android:layout_marginVertical="6dp"
            android:inputType="textPassword"
            android:hint="@string/edittext_password"
            android:imeOptions="actionDone"
            android:maxLength="50"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/mybutton"
        android:layout_below="@id/password_container"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/change_login_to_register"
        android:textStyle="italic"
        android:textColor="@color/colorText"
        />

    <ProgressBar
        android:id="@+id/loadingbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>