<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddGroupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:hintEnabled="true"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:id="@+id/name_container"
        android:layout_below="@+id/toolbar_add_group"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_input"
        style="@style/myedittext"
        android:layout_below="@+id/name_input"
        android:layout_marginVertical="6dp"
        android:inputType="text"
        android:hint="@string/edittext_name_group"
        android:imeOptions="actionDone"
        android:maxLength="50"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tv_chose_member"
        style="@style/mytextview"
        android:layout_below="@id/name_container"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/chose_member"
        />
    <TextView
        android:id="@+id/sum_member"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/tv_chose_member"
        android:layout_above="@id/recyclerview_member"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/min_member"
        style="@style/mytextview"
        android:gravity="end"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_member"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_chose_member"
        android:layout_above="@id/btn_add_group"
        android:layout_marginHorizontal="20dp"/>
    <Button
        android:id="@+id/btn_add_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mybutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:text="@string/add_group"/>

    <ProgressBar
        android:id="@+id/loadingbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>