<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/register"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_toolbar"
        android:layout_marginTop="10dp"
        android:src="@drawable/user"
        app:civ_border_color="@color/colorText"
        app:civ_border_width="2dp"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@string/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:hintEnabled="true"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:id="@+id/name_container"
        android:layout_below="@+id/user_image"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            style="@style/myedittext"
            android:layout_below="@+id/name_input"
            android:layout_marginVertical="6dp"
            android:inputType="text"
            android:hint="@string/edittext_name_user"
            android:imeOptions="actionDone"
            android:maxLength="25"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:id="@+id/password_container1"
        android:layout_below="@+id/name_container"
        android:layout_marginVertical="6dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input1"
            style="@style/myedittext"
            android:layout_below="@+id/name_input"
            android:layout_marginVertical="6dp"
            android:inputType="textPassword"
            android:hint="@string/edittext_password"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:id="@+id/password_container2"
        android:layout_below="@+id/password_container1"
        android:layout_marginVertical="6dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input2"
            style="@style/myedittext"
            android:layout_below="@+id/name_input"
            android:layout_marginVertical="6dp"
            android:inputType="textPassword"
            android:hint="@string/edittext_password2"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/mybutton"
        android:layout_below="@id/password_container2"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />


    <ProgressBar
        android:id="@+id/loadingbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>