<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/user"
        android:background="@drawable/image_background"
        app:tint="@color/white"
        app:civ_border_color="@color/colorText"
        app:civ_border_width="2dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_user"
        android:backgroundTint="@color/colorTextBackground"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="80dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            >

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_group"
                android:paddingBottom="5dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_message_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_content"
                android:layout_below="@id/tv_user_name"
                android:paddingBottom="5dp"/>
            <TextView
                android:id="@+id/tv_message_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_below="@id/tv_message_content"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>